[tool.poetry]
name = "healthon"
version = "1.0.0"
description = "Python library for the Health Planet API."
authors = ["HASEBA Junya <7pairs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
coveralls = "^2.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
